ASM 测试